Enable native access to avoid Java 25 warning